--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -288,3 +288,7 @@ input[type=date]:required:invalid::-webkit-datetime-edit {
 input[type=date]:focus::-webkit-datetime-edit {
   color: black !important;
 }
+
+.swal2-html-container {
+  font-size: 14px;
+}
